# Project-Demo

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  darknet.hpp  demo.cpp  marker.hpp
resource/WiFi/: user.txt
resource/YOLO/: model.cfg  model.weights
